--- a/golang-ethereum/.env.EXAMPLE
+++ b/golang-ethereum/.env.EXAMPLE
@@ -1,1 +1,3 @@
 INFURA_URL=https://mainnet.infura.io/v3/xxxxxxxx # Replace xxxxxxxx with your actual Infura project ID (get one at https://infura.io/)
+GANACHE_URL=HTTP://127.0.0.1:7545
+GANACHE_ETH_ADDRESS=0xA1eAbe74FbdDFB67aE5f0f7Aa8297C25D7F79e1a
