feat: sepolia eth addresses

--- a/golang-ethereum/.env.EXAMPLE
+++ b/golang-ethereum/.env.EXAMPLE
@@ -4,3 +4,5 @@ GANACHE_URL=HTTP://127.0.0.1:7545
 GANACHE_ETH_ADDRESS=0xA1eAbe74FbdDFB67aE5f0f7Aa8297C25D7F79e1a
 KEYSTORE_FOLDER=./wallet-keystore
 WALLET_PASSWORD=your_wallet_password_here
+SEPOLIA_ADDRESS_1=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 1
+SEPOLIA_ADDRESS_2=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 2
