--- a/golang-ethereum/.env.EXAMPLE
+++ b/golang-ethereum/.env.EXAMPLE
@@ -6,3 +6,5 @@ KEYSTORE_FOLDER=./wallet-keystore
 WALLET_PASSWORD=your_wallet_password_here
 SEPOLIA_ADDRESS_1=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 1
 SEPOLIA_ADDRESS_2=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 2
+SEPOLIA_ACCOUNT_1_KEYSTORE_FILEPATH=./wallet-keystore/UTC--XXXXXXXXXXXX # Replace Xs with your actual keystore filename for account 1
+SEPOLIA_ACCOUNT_2_KEYSTORE_FILEPATH=./wallet-keystore/UTC--XXXXXXXXXXXX # Replace Xs with your actual keystore filename for account 2
