feat: first solidity project with hardhat

--- a/golang-ethereum/.env.EXAMPLE
+++ b/golang-ethereum/.env.EXAMPLE
@@ -1,7 +1,7 @@
 INFURA_URL=https://mainnet.infura.io/v3/xxxxxxxx # Replace xxxxxxxx with your actual Infura project ID (get one at https://infura.io/)
 INFURA_TESTNET_URL=https://sepolia.infura.io/v3/xxxxxxxx # Replace xxxxxxxx with your actual Infura project ID (get one at https://infura.io/)
-GANACHE_URL=HTTP://127.0.0.1:7545
-GANACHE_ETH_ADDRESS=0xA1eAbe74FbdDFB67aE5f0f7Aa8297C25D7F79e1a
+LOCAL_BLOCKCHAIN_URL=HTTP://127.0.0.1:8545
+LOCAL_BLOCKCHAIN_ETH_ADDRESS=0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
 KEYSTORE_FOLDER=./wallet-keystore
 WALLET_PASSWORD=your_wallet_password_here
 SEPOLIA_ADDRESS_1=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 1
