--- a/golang-ethereum/.env.EXAMPLE
+++ b/golang-ethereum/.env.EXAMPLE
@@ -1,10 +1,13 @@
 INFURA_URL=https://mainnet.infura.io/v3/xxxxxxxx # Replace xxxxxxxx with your actual Infura project ID (get one at https://infura.io/)
 INFURA_TESTNET_URL=https://sepolia.infura.io/v3/xxxxxxxx # Replace xxxxxxxx with your actual Infura project ID (get one at https://infura.io/)
 LOCAL_BLOCKCHAIN_URL=HTTP://127.0.0.1:8545
-LOCAL_BLOCKCHAIN_ETH_ADDRESS=0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+LOCAL_BLOCKCHAIN_ETH_ADDRESS=0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 # Replace with your local blockchain address
+LOCAL_BLOCKCHAIN_ETH_ADDRESS_PRIVATE_KEY=your_private_key_here # Replace with the private key for your local blockchain address (keep it secret!)
 KEYSTORE_FOLDER=./wallet-keystore
-WALLET_PASSWORD=your_wallet_password_here
+WALLET_PASSWORD=your_wallet_password_here # Replace with your actual wallet password (keep it secret!)
 SEPOLIA_ADDRESS_1=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 1
 SEPOLIA_ADDRESS_2=0xXXXXXXX # Replace XXXXXX with your actual Sepolia testnet address 2
 SEPOLIA_ACCOUNT_1_KEYSTORE_FILEPATH=./wallet-keystore/UTC--XXXXXXXXXXXX # Replace Xs with your actual keystore filename for account 1
 SEPOLIA_ACCOUNT_2_KEYSTORE_FILEPATH=./wallet-keystore/UTC--XXXXXXXXXXXX # Replace Xs with your actual keystore filename for account 2
+TODO_CONTRACT_ADDRESS=0xXXXXXXX # Replace with your deployed Todo contract address (get it after deploying the contract)
+TODO_LOCAL_CONTRACT_ADDRESS=0xXXXXXXX # Replace with your deployed local Todo contract address (get it after deploying the contract)
